# WenMai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  start.py
.claude/memory/: schema-rethink.md
.github/workflows/: ci.yml
.obsidian/: graph.json
_templates/: arc.md  chapter_summary.md  concept.md  item.md  location.md  person.md  世界观.md  主线.md  伏笔池.md
novels/万古劫烬/: novel_schema.json
novels/万古劫烬/index/: entity_alias_index.json  entity_chapter_index.json  entity_term_index.json
novels/万古劫烬/plot/: 世界观.md  (+2 more)
novels/义体深渊/: novel_schema.json
novels/异域神启之章/: novel_schema.json
novels/都市艳录/: novel_schema.json
pipeline/: classifier.py  commit_store.py  config.sample.yaml  config_helper.py  context_builder.py  distiller.py  entity_index.py  entity_linker.py  generator.py  main.py  md_renderer.py  plot_health.py  reader.py  requirements.txt  retriever.py  schema_gen.py  state_schema.py  tools.py  validators.py  writer.py
pipeline/anti_ai/: __init__.py  layer1_clean.py  layer2_syntax.py  layer3_llm.py  layer4_validate.py  pipeline.py  word_bank.py
pipeline/commands/: _utils.py  audit.py  distill.py  enrich.py  init.py  manage.py  plan.py  polish.py  rollback.py  status.py  worldbuild.py  write.py
pipeline/prompts/: __init__.py  distill.py  generate_chapter.py  generate_outline.py  init_novel.py  observer.py  settler.py  state_validator.py
pipeline/tests/: conftest.py  test_distiller.py  test_reader.py  test_state_schema.py  test_writer.py
web/backend/: requirements.txt  server.py
web/frontend/: index.html  package-lock.json  vite.config.js
(+675 files in other folders)
