[project]
name = "wenmai"
version = "0.1.0"
description = "Obsidian + LLM Chinese web novel writing pipeline"
requires-python = ">=3.10"
dependencies = [
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0,<1.0",
    "certifi>=2024.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.11.0",
    "mypy>=1.15",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["N817", "N818", "E501", "E402", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["web/"]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
pythonpath = ["pipeline"]
